--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 host_key_checking=False
 timeout = 900
 forks = 20
+log_path = k8soutscale.log
 
 [ssh_connection]
 ssh_args = -C -o ControlMaster=auto -o ControlPersist=30m -o ServerAliveInterval=120
