--- a/rancher-init.yml
+++ b/rancher-init.yml
@@ -183,7 +183,7 @@
 
       - name: Download RKE
         shell: >
-          /usr/bin/curl -LO https://github.com/rancher/rke/releases/download/v1.0.4/rke_linux-amd64  |
+          /usr/bin/curl -LO https://github.com/rancher/rke/releases/download/v1.0.4/rke_linux-amd64
         args:
           chdir: /usr/local/bin
 
