--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,11 @@
 [defaults]
 host_key_checking=False
-timeout = 900
-forks = 20
+timeout = 600
+forks = 30
 log_path = k8soutscale.log
+ssh_args=-o ControlMaster=auto -o ControlPersist=30m -o ServerAliveInterval=120
 
 [ssh_connection]
-ssh_args = -C -o ControlMaster=auto -o ControlPersist=30m -o ServerAliveInterval=120
 remote_user = outscale
 private_key_file = /tmp/rancher_id_rsa
 
