--- a/vars/rancher_cluster.yml
+++ b/vars/rancher_cluster.yml
@@ -1,6 +1,7 @@
 ---
 outscale_rancher_image: ami-3770adc9
 outscale_endpoint: https://fcu.us-east-2.outscale.com
+outscale_object_endpoint: https://osu.us-east-2.outscale.com
 outscale_instance_type: "tinav5.c2r4p1"
 outscale_region: us-east-2
 aws_profile: outscale
