--- a/rancher-init.yml
+++ b/rancher-init.yml
@@ -332,12 +332,12 @@
 
       - name: Delete existing generated certs
         shell: >
-          /snap/bin/kubectl -n cloud-infrastructure delete secret tls-rancher-ingress
+          /snap/bin/kubectl -n {{ k8s_cluster_namespace }} delete secret tls-rancher-ingress
         ignore_errors: yes
 
       - name: Add TLS certs to Rancher
         shell: >
-          /snap/bin/kubectl -n cloud-infrastructure create secret tls tls-rancher-ingress \
+          /snap/bin/kubectl -n {{ k8s_cluster_namespace }} create secret tls tls-rancher-ingress \
           --cert=/etc/ssl/private/imedidata.crt \
           --key=/etc/ssl/private/imedidata.key
 
